# Semantic-LLM-Interpreter

./: .gitignore  LICENSE  MANIFEST.in  README.md  debug_setup.py  final_test_report.txt  final_test_report_v2.txt  pyproject.toml  test_log.txt  test_output.txt
package/: README.md  requirements.txt  setup.py
package/semantic_llm_interpreter/: __init__.py
package/semantic_llm_interpreter/core/: interpreter.py
package/semantic_llm_interpreter/interpreters/: adapters.py  keras_interpreter.py
semantic_llm_interpreter/core/: __init__.py  brancher.py
semantic_llm_interpreter/interpreters/: __init__.py  base_interpreter.py  main_factory.py  torch_interpreter.py
tests/: benchmark_suite.py  run_interpreter_comparison.py  test_context_logic.py  test_quantile_logic.py  verify_divergence.py  verify_performance.py
tests/comprehensive/: test_core_inputs.py  test_parameters.py  test_wrapper_shapes.py
tests/integration/: test_end_to_end.py
tests/unit/: test_interpreter.py  test_interpreters.py  test_quantile_math.py
tests/ux_rehearsal/: demo_hf.py
